Prevent from overflowing?

--- a/style/calendar2.css
+++ b/style/calendar2.css
@@ -1,4 +1,3 @@
 travel-calendar {
     background-color: white;
-    border-internal: 1px dashed red;
 }
